tests/ui/lint/snapshots/discarded_function_value_native_call_errors.snap
---
source: tests/ui/lint/mod.rs
---
  [error] Mismatch between return type and return value
   ╭─[test.lis:3:3]
 1 │ 
 2 │ fn test() {
   ·           ┬
   ·           ╰── has `()` as implicit return type
 3 │   "test".length()
   ·   ───────┬───────
   ·          ╰── returns `int`
 4 │ }
   ╰────
  help: If the `()` return type is intended, discard the return value with `let _ = ...`. If the `int` return value is intended, add `-> int` to the function signature · code: [lint.unused_value]
