tests/ui/lint/snapshots/discarded_lambda_value_expression_body_errors.snap
---
source: tests/ui/lint/mod.rs
---
  [error] Mismatch between return type and return value
   ╭─[test.lis:4:11]
 3 │ fn main() {
 4 │   take(|| 42)
   ·        ┬  ─┬
   ·        │   ╰── returns `int`
   ·        ╰── has `()` as implicit return type
 5 │ }
   ╰────
  help: If the `()` return type is intended, discard the return value with `let _ = ...`. If the `int` return value is intended, add `-> int` to the function signature · code: [lint.unused_value]
