tests/ui/lint/snapshots/discarded_non_call_result_tail_errors.snap
---
source: tests/ui/lint/mod.rs
---
  [error] Mismatch between return type and return value
   ╭─[test.lis:5:3]
 2 │ fn get_result() -> Result<int, string> { Ok(1) }
 3 │ fn test() {
   ·           ┬
   ·           ╰── has `()` as implicit return type
 4 │   let r = get_result()
 5 │   r
   ·   ┬
   ·   ╰── returns `Result<int, string>`
 6 │ }
   ╰────
  help: If the `()` return type is intended, discard the return value with `let _ = ...`. If the `Result<int, string>` return value is intended, add `-> Result<int, string>` to the function signature · code: [lint.unused_result]
