tests/ui/lint/snapshots/discarded_paren_call_returning_result_errors_as_unused_result.snap
---
source: tests/ui/lint/mod.rs
---
  [error] Mismatch between return type and return value
   ╭─[test.lis:4:3]
 2 │ fn might_fail() -> Result<int, string> { Ok(1) }
 3 │ fn test() {
   ·           ┬
   ·           ╰── has `()` as implicit return type
 4 │   (might_fail())
   ·   ───────┬──────
   ·          ╰── returns `Result<int, string>`
 5 │ }
   ╰────
  help: If the `()` return type is intended, discard the return value with `let _ = ...`. If the `Result<int, string>` return value is intended, add `-> Result<int, string>` to the function signature · code: [lint.unused_result]
